# rerust

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: crud.rs  mod.rs  schema.rs
src-tauri/src/llm/: config.rs  mod.rs  prompts.rs  server_proxy.rs
src-tauri/src/llm/prompts/: checkpoint.txt  ctx_seedance_phase_ad.txt  ctx_seedance_unit_efg.txt  selfcheck.txt  slug_asset_character.txt  slug_asset_prop.txt  slug_asset_scene.txt  slug_prompt_seedance_scene.txt  slug_prompt_segment_planning.txt  slug_script_planning.txt  slug_script_review.txt  slug_script_writing.txt  step1.txt  step2.txt  step3.txt  step4.txt  step5.txt  step6.txt  step7.txt  step8.txt
src-tauri/src/services/: asset_extraction.rs  duration.rs  mod.rs  prompt_generation.rs  screenplay.rs  screenplay_store.rs  script_generation.rs  script_review.rs  seedance_service.rs  seedance_store.rs
src-tauri/src/utils/: mod.rs  step_parser.rs  v5_parser.rs
