[package]
name = "cineforge"
version = "2.0.5"
edition = "2021"
description = "创剧 CineForge — 实现从剧本到电影流线化产出"

[lib]
name = "cineforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
regex-lite = "0.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
